--- a/Practica 2/inicio.html
+++ b/Practica 2/inicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Formulario de Registro</h1>
-    <form id="userForm">
+    <form id="form">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre"><br><br>
 
