--- a/Proyecto 3/Ejercicio2.html
+++ b/Proyecto 3/Ejercicio2.html
@@ -15,9 +15,13 @@
                     <option value="Libre">Libre</option>
             </select>
             <label for="curso">Curso: </label>
-            <input type="range" id="curso" name="curso" required><br>
+            <select id="curso" name="curso" id="curso">
+                
+            </select><br>
             <label for="telefono">Tel: </label>
             <input type="tel" id="telefono" name="telefono" required><br>
+            <button type="submit">Registrar</button>
         </form>
+        <script src="Ejercicio2.js"></script>
     </body>
 </html>
