--- a/Proyecto 3/Ejercicio3.html
+++ b/Proyecto 3/Ejercicio3.html
@@ -10,6 +10,7 @@
             height: 100vh;
             margin: 0;
             overflow: hidden; /* Evitar desplazamiento de la página */
+            background-image: url("https://th.bing.com/th/id/R.ec6c775c40cfb1a6b8996d5969fdfa92?rik=MgCBUsC8rw9dxw&pid=ImgRaw&r=0");
         }
 
         #miImagen {
